--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,31 @@
+html {
+  min-height: 100%;
+  height: 100%;
+  overflow-y: scroll;
+  width: 100%;
+  min-width: 100%;
+  overflow-x: hidden;
+  display: block;
+  margin: 0;
+  position: relative;
+  top: 0;
+  left: 0;
+}
+
 body {
-  background-color: var(--color-background-light);
+  background: linear-gradient(135deg,#c1befc,#fdf7f5 40%);
   font-family: var(--font-family);
+  min-height: 100%;
+  height: 100%;
+  overflow-y: scroll;
+  width: 100%;
+  min-width: 100%;
+  overflow-x: hidden;
+  display: block;
+  margin: 0;
+  position: relative;
+  top: 0;
+  left: 0;
 }
 
 .theme-selector {
@@ -16,6 +41,7 @@ body {
   --color-primary: #8653f6;
   --color-secondary: rgb(255, 0, 122);
   --color-text: #6e6e6e;
+  --background-body: linear-gradient(135deg,#d2d0f7,#fdf7f5 41%);
   --color-background-light: #ffff;
   --color-background: #333333;
   --color-background-dark: #292929;
@@ -59,6 +85,7 @@ body {
   --color-primary: #8653f6;
   --color-secondary: rgb(255, 0, 122);
   --color-text: #6e6e6e;
+  --background-body: linear-gradient(135deg,#d2d0f7,#fdf7f5 41%);
   --color-background-light: #ffff;
   --color-background: #b42323;
   --color-background-dark: #7b1515;
