--- a/src/components/MainTemplate/main-template.module.css
+++ b/src/components/MainTemplate/main-template.module.css
@@ -1,17 +1,18 @@
 .root {
-  min-height: 100vh;
-  height: 100%;
-  background-color: var(--color-background-dark);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+  margin: 100px auto 0 auto;
+  display: block;
+  text-align: center;
 }
 
 .container {
   padding: calc(var(--unit) * 3) 10px 0 10px;
   min-height: 300px;
-  flex-direction: row;
-  width: 75%;
+  width: 1100;
+  margin: 10px auto 20px 150px;
+  display: inline-block;
 }
 
 .hideHeader {
