--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,18 @@ code {
     monospace;
 }
 
+*:focus{
+  outline: none;
+ }
+
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
