--- a/src/components/ModalStandard/modal-standard.module.css
+++ b/src/components/ModalStandard/modal-standard.module.css
@@ -1,2 +1,2 @@
-.ModalBack {position: fixed; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; background: linear-gradient(135deg,#c1befc83,#fdf7f5a9 40%); text-align: center;}
-.ModalBox {width: 500px; min-height: 300px; max-height: 60%; display: inline-block; margin-top: 50px; background-color: #E4E4E4;}
+.ModalBack {position: fixed; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; background: linear-gradient(135deg,#c1befcd8,#fdf7f5b6 80%); text-align: center;display: flex;flex-wrap: wrap;flex-direction: row;justify-content: center;align-items: center;align-content: center}
+.ModalBox {width: 40%; height: 70%; display: flex; background-color: #F0F0F0; border-radius: 20px;box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-webkit-box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-moz-box-shadow: 1px 1px 2px 1px rgba(202,202,202,0.32);}
