--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -1,15 +1,15 @@
 .root {
+  height: 100%;
   display: inline-block;
-  width: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 70px;
-  text-align: left;
+  text-align: center;
+  min-width:170px;
+  width: 18%;
+  vertical-align: top;
+  overflow: hidden;
 }
 
-.logoMain {height: 50px; width: 60px; margin: 10px; display: inline-block;}
-.logoMain img {height: 50px; width: 60px; display: block;}
+.logoMain {height: 90px; width: 110px; margin: 20px 0px 20px 35px; display: block;}
+.logoMain img {height: 90px; width: 110px; display: block;}
 
 h3 {
   align-self: center;
