--- a/src/pages/ItemsMain/Sections/items-main-sections.module.css
+++ b/src/pages/ItemsMain/Sections/items-main-sections.module.css
@@ -7,6 +7,7 @@
 }
 
 .ItemsExploreMain {width: 100%; text-align: left;}
+.ItemsCreateMain {width: 100%; text-align: center;}
 .SingleContentPage {width: 100%; max-width: 990px; text-align: center;}
 .CollectionLeft {width: 300px; display: inline-block; text-align: center; margin-top: 90px; vertical-align: top;}
 .CollectionRight {width: 660px;display: inline-block; text-align: center; margin-top: 90px; margin-left: 30px;vertical-align: top;}
