--- a/src/components/DappMenu/dapp-menu.module.css
+++ b/src/components/DappMenu/dapp-menu.module.css
@@ -1,3 +1,3 @@
-.Dapp_Menu {display: inline-block; padding: 0 10px; margin: 25px auto; background-color: #ffffff; width: auto; height: 40px;border-radius: 24px;box-shadow: 1px 1px 2px 1px rgba(202,202,202,0.32);-webkit-box-shadow: 1px 1px 2px 1px rgba(202,202,202,0.32);-moz-box-shadow: 1px 1px 2px 1px rgba(202,202,202,0.32);}
+.Dapp_Menu {display: inline-block; padding: 0 10px; margin: 50px auto 30px auto; background-color: #ffffff; width: auto; height: 40px;border-radius: 24px;box-shadow: 1px 1px 2px 1px rgba(202,202,202,0.32);-webkit-box-shadow: 1px 1px 2px 1px rgba(202,202,202,0.32);-moz-box-shadow: 1px 1px 2px 1px rgba(202,202,202,0.32);}
 .Dapp_Menu > li {display: inline-block;}
 .Dapp_Menu > li > a {display: inline-block; padding: 11px 15px;font-size: 17px;display: inline-block; text-decoration: none; cursor: pointer;}
