--- a/src/components/Navigation/navigation.module.css
+++ b/src/components/Navigation/navigation.module.css
@@ -1,16 +1,17 @@
 .Navigation {
   display: block;
-  background-color: #F0F0F0;
+  border-left: 2px solid #F0F0F0;
   padding: 10px;
-  width: 150px;
+  width: 148px;
   margin: 30px 15px;
-  border-radius:12px;
-  box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-webkit-box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-moz-box-shadow: 1px 1px 2px 1px rgba(202,202,202,0.32);vertical-align: middle; cursor: pointer; width:150px; text-align: center;
+  cursor: pointer; 
+  text-align: center;
 }
 .Navigation a {margin: 7px 0;display: inline-block;width: 100%;text-align: left;}
 
 .item {
   font-size: 15px;
+  color: #ffffff;
 }
 
 .indicator {
