--- a/src/components/Navigation/navigation.module.css
+++ b/src/components/Navigation/navigation.module.css
@@ -7,11 +7,25 @@
   cursor: pointer; 
   text-align: center;
 }
-.Navigation a {margin: 7px 0;display: inline-block;width: 100%;text-align: left;}
+.Navigation a {
+  margin: 7px 0;
+  display: inline-block;
+  width: 100%;
+  text-align: left;
+  padding: 2px 8px;
+}
 
 .item {
   font-size: 15px;
   color: #ffffff;
+  vertical-align: middle;
+  display: inline-block;
+}
+
+.selected {
+  font-weight: bold;
+  color: #6e6e6e;
+  background-color: #c1befc;
 }
 
 .indicator {
@@ -20,4 +34,32 @@
 
 p {
   align-self: center;
+}
+
+@media only screen and (max-width: 1300px) {
+  .Navigation {
+    display: inline-block;
+    border-left: none;
+    padding: 8px;
+    width: auto;
+    cursor: pointer; 
+    text-align: center;
+    margin: 0px 0px 0px 50px;
+    vertical-align: top;
+  }
+  .item {
+    font-size: 14px;
+    color: #000000;
+    width:100%;
+    text-align: center;
+  }
+  .Navigation a {
+    margin: 7px 10px;
+    display: inline-block;
+    text-align: left; 
+    width: 120px; 
+    text-align: center;
+    background-color: #F0F0F0;
+    box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-webkit-box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-moz-box-shadow: 1px 1px 2px 1px rgba(202,202,202,0.32);
+    border-radius: 8px;}
 }
