--- a/src/components/Web3Connect/web3-connect.module.css
+++ b/src/components/Web3Connect/web3-connect.module.css
@@ -5,3 +5,7 @@
 .Web3ConnectWallet {height: 35px;display: inline-block; padding: 3px 5px; border-radius: 12px; background-color: #E4E4E4;box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-webkit-box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-moz-box-shadow: 1px 1px 2px 1px rgba(202,202,202,0.32);vertical-align: middle; cursor: pointer; width:150px; text-align: center;}
 .Web3ConnectWallet img {width:25px; height:25px; display: inline-block; margin: 3px 3px 3px -7px; vertical-align: middle;}
 .Web3ConnectWallet p {display: inline-block; margin: 3px;vertical-align: middle;font-size: 15px; font-weight: bold;}
+
+@media only screen and (max-width: 1300px) {
+    .Web3Connect {display: inline-block; text-align:right; margin:10px 10px; padding-left: 0px; float: right;}
+  }
