--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -30,7 +30,7 @@ h3 {
     min-height: auto;
   }
   .Header .FixedHeader {position: fixed; left: 0; top: 0; width: 100%; height: 60px;backdrop-filter: blur(6px);}
-  .Header .BlurHeader {display: block; position: fixed; left: 0; top: 0; width: 100%; height: 60px;border-radius: 0; border: 0; background: #ffffff3a; box-shadow: 1px 1px 2px 1px rgba(202,202,202,0.32);-webkit-box-shadow: 1px 1px 2px 1px rgba(202,202,202,0.32);-moz-box-shadow: 1px 1px 2px 1px rgba(202,202,202,0.32);}
+  .Header .BlurHeader {display: block; position: fixed; left: 0%; top: 0%; width: 100%; height: 60px;border-radius: 0;  border: 0; background: linear-gradient(-130deg,#c1befc4d,#fdf7f515 80%); box-shadow: 1px 1px 2px 1px rgba(202,202,202,0.32);-webkit-box-shadow: 1px 1px 2px 1px rgba(202,202,202,0.32);-moz-box-shadow: 1px 1px 2px 1px rgba(202,202,202,0.32);}
   .logoMain {height: 40px; width: 50px; margin: 10px 0px 0px 10px; display: inline-block;vertical-align: top;}
   .logoMain img {height: 40px; width: 50px; display: block;}
 }
