--- a/src/pages/CovenantsMain/covenants-main.module.css
+++ b/src/pages/CovenantsMain/covenants-main.module.css
@@ -1,5 +1,5 @@
-.root {
-  width: 70%;
+.Web3PagesRoot {
+  width: 1050px;
 }
 
 .image {
@@ -18,3 +18,7 @@
 .text:last-child {
   margin-bottom: calc(var(--unit) * 10);
 }
+
+.CovenantsMainBox {width:800px; position: relative; display:inline-block; min-height:500px; background-color:#ffffff; box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-webkit-box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-moz-box-shadow: 1px 1px 2px 1px rgba(202,202,202,0.32); margin: 30px auto 10px auto; padding: 50px; border-radius: 20px;}
+.CovenantsMainBox > ul {position: absolute;top: -30px;margin: 0;left: -60px; width: 100px; height: auto;}
+.CovenantsMainBox > ul > li {display: block;}
