--- a/src/components/Global/MainTemplate/main-template.module.css
+++ b/src/components/Global/MainTemplate/main-template.module.css
@@ -12,7 +12,7 @@
   min-height: 300px;
   width: 80%;
   min-width: 750px;
-  margin: 20px 0 20px 2%;
+  margin: 0 0 20px 2%;
   display: inline-block;
   text-align: center;
 }
