--- a/src/components/Covenants/RoutineInfo/routine-info.module.css
+++ b/src/components/Covenants/RoutineInfo/routine-info.module.css
@@ -3,3 +3,4 @@
 .RoutineContentTitle h6 {font-size: 17px;width: 95%;text-align: left;display: inline-block;font-weight: bolder; margin-bottom: 10px;}
 .RoutineContentInfo {width: 40%;margin-left: 4%;display: inline-block;vertical-align: middle;}
 .RoutineContentInfo p {display: inline-block;width: 95%;font-size: 14px;margin-bottom: 5px;}
+.RutineBack {position: absolute; top: 0px; left: 0; text-align: left; width: 100%; display: inline-block; padding: 10px 10px;}
