--- a/src/components/Covenants/FarmInfo/farm-info.module.css
+++ b/src/components/Covenants/FarmInfo/farm-info.module.css
@@ -1,10 +1,16 @@
-.RoutineContent {border-color: #ebebeb;background-color: #f7fafe;width: 100%;display: inline-block;margin: 10px auto;min-width: 600px;border-radius: 12px;padding: 3%;text-align: left;}
-.RoutineContentTitle {width: 55%;display: inline-block;margin-right: 1%;text-align: left;}
-.RoutineContentTitle h6 {font-size: 17px;width: 95%;text-align: left;display: inline-block;font-weight: bolder; margin-bottom: 10px;}
-.RoutineContentInfo {width: 40%;margin-left: 4%;display: inline-block;vertical-align: middle;}
-.RoutineContentInfo p {display: inline-block;width: 95%;font-size: 14px;margin-bottom: 5px;}
+.FarmInfoBox {}
 .RutineBack {position: absolute; top: 0px; left: 0; text-align: left; width: 100%; display: inline-block; padding: 10px 10px;}
-.OperationsBox {width: 100%; margin: 50px auto 0 auto;}
-.OperationsTrigger {width: 100%; margin: 20px auto; padding: 15px;}
-.OperationsTrigger h6 {display: inline-block; margin-right: 10px; width: auto;}
-.OperationsTrigger span a {cursor: pointer; text-decoration: underline; font-weight: bold;}
+.FarmContent {width: 100%;display: inline-block;margin: 10px auto;min-width: 600px;border-radius: 12px;padding: 3%;text-align: left;}
+.FarmContentTitle {width: 40%;display: inline-block;margin-right: 1%;text-align: left;}
+.FarmContentTitle figure {width: 40%;display: inline-block;text-align: center;-webkit-margin-before: 0;margin-block-start: 0;-webkit-margin-after: 0;margin-block-end: 0;-webkit-margin-start: 0;margin-inline-start: 0;-webkit-margin-end: 0;margin-inline-end: 0;margin-bottom: 5px;vertical-align: middle;}
+.FarmContentTitle figure img {display: inline-block;width: 70px;max-height: 130px;vertical-align: middle;}
+.FarmContentTitle aside {width: 60%;margin-bottom: 5px;vertical-align: middle;    text-align: center;display: inline-block;}
+.FarmContentTitle aside h6 {font-size: 16px;width: 95%;text-align: center;display: inline-block;font-weight: bolder; margin-bottom: 10px;}
+.FarmContentInfo {width: 55%;margin-left: 4%;display: inline-block;vertical-align: middle;}
+.FarmContentInfo p {display: inline-block;width: 95%;font-size: 14px;margin-bottom: 5px;}
+.FarmActivity {padding: 2px 4px;font-size: 13px;margin-left: 4px;}
+.FarmActivityA {color: rgba(52,177,94,.8784313725490196);border: 2px solid rgba(52,177,94,.8784313725490196);border-radius: 6px;}
+.FarmActivityI {color: #ad0002;border: 2px solid #ad0002;border-radius: 6px;}
+.VersionFarm {color: #bd84fb;font-weight: bolder;padding: 2px 4px;border: 2px solid #bd84fb;border-radius: 5px;font-size: 13px;margin: 0 0 0 10px;}
+.FarmContentInfo p > span {padding: 4px 8px;font-size: 12px;margin: 2px 8px 2px 0px; display: inline-block;}
+.FarmSetpsList {width: 100%; display: inline-block;}
