--- a/src/components/Covenants/FarmSetup/farm-setup.module.css
+++ b/src/components/Covenants/FarmSetup/farm-setup.module.css
@@ -1,7 +1,61 @@
-.RoutineOperation {width: 100%; padding: 10px; text-align: left; border: 2px solid rgb(132, 155, 189); border-radius: 20px; position: relative; margin: 30px auto;}
-.RoutineOperationT {width: 100%; text-align: left;}
-.RoutineOperationTB { display: inline-block; text-align: left; width: 100%;vertical-align: middle; padding:10px  30px;}
-.RoutineOperationSchedule {width: 100%; padding:10px  30px; text-align: left; display: block;}
-.RoutineOperationSchedule p {font-size: 18px; display: inline-block; width: 100%; text-align: left;}
-.RoutineOperationSchedule p b {font-weight: bold;}
-.RoutineOperationSchedule p img {width: 30px; height: 30px; vertical-align: middle; margin: 0 5px;}
+.FarmSetup {
+    width: 100%;
+    border: 1px solid #e0e2e6; 
+    border-radius: 15px;
+    background-color: #f7fafe;
+    overflow: hidden;
+    margin: 25px auto;
+}
+.FarmMain {
+    width: 100%;
+    display: inline-block;
+}
+.FarmInstructions {
+    width: 41%;
+    display: inline-block;
+    vertical-align: middle;
+    padding: 20px;
+    text-align: left;
+}
+.farmInfoCurve {
+    background-color: #e9effc;
+    display: inline-block;
+    width: 56%;
+    float: right;
+    height: 100%!important;
+    min-height: 100%!important;
+    max-height: 100%!important;
+    padding: 40px 20px;
+}
+.FarmToken {
+    width: auto;
+    display: block;
+    margin: 6px 0 0 4px;
+}
+.FarmToken figure {
+    display: inline-block;
+    -webkit-margin-before: 0;
+    margin-block-start: 0;
+    -webkit-margin-after: 0;
+    margin-block-end: 0;
+    -webkit-margin-start: 0;
+    margin-inline-start: 0;
+    -webkit-margin-end: 0;
+    margin-inline-end: 0;
+    vertical-align: middle;
+    width: 25px;
+    height: auto;
+    max-height: 40px;
+}
+.FarmToken img {
+    width: 25px;
+    height: auto;
+    max-height: 40px;
+}
+.FarmToken span {font-size: 13px;font-weight: 700;color: #5f5b53; vertical-align: middle; display: inline-block;margin-left: 5px; }
+.FarmInfoDetail {width: 100%; display: inline-block;font-size: 13px!important;margin: 10px 0 4px 4px;}
+.FarmActivityA {color: rgba(52,177,94,.8784313725490196);border: 2px solid rgba(52,177,94,.8784313725490196);border-radius: 6px;padding: 2px 4px;font-size: 13px;display: inline-block;margin: auto 5px auto 0px;}
+.FarmActivityI {color: #ad0002;border: 2px solid #ad0002;border-radius: 6px;padding: 2px 4px;font-size: 13px;display: inline-block;margin: auto 5px auto 0px;}
+.FarmInfoDetail b, .FarmInfoDetailS b {font-weight: bold;}
+.FarmInfoDetailS {width: 100%; display: inline-block;font-size: 11px!important;margin: 5px 0 4px 4px;}
+.FarmInfoDetailS a {text-decoration: underline; color: #5f5b53;}
