--- a/src/components/Covenants/FarmSetup/farm-setup.module.css
+++ b/src/components/Covenants/FarmSetup/farm-setup.module.css
@@ -59,3 +59,6 @@
 .FarmInfoDetail b, .FarmInfoDetailS b {font-weight: bold;}
 .FarmInfoDetailS {width: 100%; display: inline-block;font-size: 11px!important;margin: 5px 0 4px 4px;}
 .FarmInfoDetailS a {text-decoration: underline; color: #5f5b53;}
+.farmInfoCurveL {width: 45%;display: inline-block;vertical-align: middle; margin-left: 0;font-size: 14px;margin-bottom: 2px;}
+.MAinTokensel {vertical-align: middle;margin: 5px auto;width: 100%;font-size: 12px;font-weight: 700;}
+.MAinTokensel a {width: 30px;height: 30px;display: inline-block;vertical-align: middle;}
