--- a/src/components/Global/ObjectsLists/objects-lists.module.css
+++ b/src/components/Global/ObjectsLists/objects-lists.module.css
@@ -14,3 +14,14 @@
 .ObjectInfoCategory {width: 100%; display: inline-block; text-align: left; padding: 4% 0;}
 .ObjectInfoCategory h5 {width:100%; text-align:left;}
 .ObjectInfoCategory span {width: 100%; text-align: left; font-size:11px;}
+.TokensSelector {width: 100%; display: block; position: relative;}
+.TokensSelectorList {height: 90%; width: 100%; padding: 10px; display: block; border-radius: 20px 20px 0 0; overflow-y: scroll;}
+.TokensSelectorCategories {height: 60px; background-color: #525252; border-top: 2px solid #E4E4E4; width: 100%; display: block; border-radius: 0 0 20px 20px; position: absolute; left:0; bottom: 0; text-align: center; overflow: hidden;}
+.TokensSelectorCategories input {width: 40%;display: inline-block; vertical-align: top;height: 100%;background-color: #525252;border: none;border-radius: 0 0 0 20px;color: #ffffff;font-size: 16px;padding: 2%;}
+.TokensSelectorCategories input::placeholder {color: #ffffff;opacity: 1;}
+.TokensSelectorCategories input:-ms-input-placeholder {color: #ffffff;}
+.TokensSelectorCategories input::-ms-input-placeholder {color: #ffffff;}
+.TokensSelectorCategoriesList {width: 60%; height:100%; display: inline-block;background-color: #F0F0F0;}
+.TokensSelectorCategoriesList a {width: 33.33%;padding: 20px 1%; display: inline-block; background-color: #F0F0F0; vertical-align: top; cursor: pointer;}
+.TokensSelectorCategoriesList .selected, .TokensSelectorCategoriesList a:hover  { background-color: #ffffff;}
+.TokensSelectorCategoriesList .selected {font-weight: bold;}
