--- a/src/components/Covenants/FarmSetup/farm-setup.module.css
+++ b/src/components/Covenants/FarmSetup/farm-setup.module.css
@@ -6,6 +6,7 @@
     overflow: hidden;
     margin: 25px auto;
 }
+b {font-weight: bold;}
 .FarmMain {
     width: 100%;
     display: inline-block;
@@ -57,10 +58,30 @@
 .FarmActivityA {color: rgba(52,177,94,.8784313725490196);border: 2px solid rgba(52,177,94,.8784313725490196);border-radius: 6px;padding: 2px 4px;font-size: 13px;display: inline-block;margin: auto 5px auto 0px;}
 .FarmActivityI {color: #ad0002;border: 2px solid #ad0002;border-radius: 6px;padding: 2px 4px;font-size: 13px;display: inline-block;margin: auto 5px auto 0px;}
 .FarmInfoDetail b, .FarmInfoDetailS b {font-weight: bold;}
-.FarmInfoDetailS {width: 100%; display: inline-block;font-size: 11px!important;margin: 5px 0 4px 4px;}
+.FarmInfoDetailS {width: 100%; display: inline-block;font-size: 11px!important;margin: 5px 0 0px 0px;}
+.FarmInfoDetailM {width: 100%;text-align: center; display: inline-block;font-size: 11px!important;margin: 25px 0 0px 0px}
+.FarmInfoDetailL {width: 100%;display: inline-block;font-size: 11px!important;margin: 25px 0 0px 0px}
 .FarmInfoDetailS a {text-decoration: underline; color: #5f5b53;}
-.farmInfoCurveL {width: 45%;display: inline-block;vertical-align: middle; margin-left: 0;font-size: 14px;margin-bottom: 2px;}
+.farmInfoCurveL {width: 48%;display: inline-block;vertical-align: middle; margin-left: 0;font-size: 14px;margin-bottom: 2px; text-align: left;}
 .MAinTokensel {vertical-align: middle;margin: 5px auto;width: 100%;font-size: 12px;font-weight: 700;}
 .MAinTokensel a {width: 30px;height: 30px;display: inline-block;vertical-align: middle; margin-right: 5px;}
 .MAinTokensel a img {width: 30px;height: 30px;display: inline-block;}
-.farmInfoCurveR {display: inline-block;font-size: 14px;margin-bottom: 2px;width: 42%;margin-left: 2%;}
+.farmInfoCurveR {display: inline-block;font-size: 14px;margin-bottom: 2px;width: 45%;margin-left: 2%; text-align: right;}
+.UniV3CurveViewCurv {width: 95%; height: 30px; margin-bottom: 30px; border-bottom: 1px solid #7472fc; position: relative;}
+.CircleLeftV3Curve, .CircleRightV3Curve {position: absolute; bottom: -5px; background-color: #7472fc; border: 1px solid #7472fc; color: #7472fc; height: 8px; width: 8px; border-radius: 100%;}
+.CircleLeftV3Curve {left: -7px;}
+.CircleRightV3Curve {right: -7px;}
+.CircleLeftV3CurvePrice, .CircleRightV3CurvePrice {font-size: 11px;position: absolute;bottom: -22px;}
+.CircleLeftV3CurvePrice {left: -7px;}
+.CircleRightV3CurvePrice {right: -7px;}
+.CircleActualPriceV3 {display: inline-block; text-align: center; position: absolute;left: 50%;bottom: -14px;}
+.CircleRightV3Actual {display: inline-block;height: 20px; width: 20px; position: relative;margin-left: -8px;}
+.CircleRightV3Actual img {width: 14px;height: 14px;margin-bottom: 12px;}
+.CircleRightV3ActualPrice {display: inline-block;font-size: 11px; font-weight: bold;position: absolute; top: -17px;left: 0px;}
+.UniV3CurveView {display: block; width: 100%; margin-top: 10px; padding: 3%;}
+.farmInfoCurve {background-color: #e9effc; display: inline-block; width: 56% !important; float: right; height: 100% !important;min-height: 100% !important;max-height: 100% !important;padding: 40px 20px;}
+.UniV3TVLFIV {width: 100%; margin:0px auto 10px auto; text-align: center; font-size: 10px !important; display: inline-block;}
+.YourFarmingPositionsFarmingFarmingFarmingChiFarmaViveComeUnPAsha {width: 100%; display: inline-block; padding: 10px; margin: 5px auto 0px auto; border-radius: 15px; background-color: #e9effc; margin-top: -20px; background-color: #849BBD; border: 1px solid #849BBD;}
+.FarmingYouInfoPart {width: 50%; display: inline-block; text-align: center;}
+.FarmingYouInfoPart span {color: #ffffff;width: 100%; margin:0px auto 10px auto; text-align: center; font-size: 12px !important; display: inline-block}
+.TimetoFarm {width: 100%; display: inline-block; padding: 10px; margin: 5px auto 0px auto; border-radius: 0; background-color: #e9effc; margin-top: -20px; background-color: #e9effc; border: 1px solid #e9effc;}
