--- a/src/pages/OrganizationsMain/dapp/sections/organizations-main-sections.module.css
+++ b/src/pages/OrganizationsMain/dapp/sections/organizations-main-sections.module.css
@@ -6,8 +6,7 @@
   height: 300px;
 }
 
-.ItemsExploreMain {width: 100%; text-align: left;}
-.ItemsCreateMain {width: 100%; text-align: center;}
+.OrganizationsExploreMain {width: 100%; text-align: left;}
 .SingleContentPage {width: 100%; max-width: 990px; text-align: center;}
 .CollectionLeft {width: 300px; display: inline-block; text-align: center;  vertical-align: top;}
 .CollectionRight {width: 660px;display: inline-block; text-align: center;  margin-left: 30px;vertical-align: top;}
