--- a/src/components/Organizations/ExploreOrganizations/explore-organizations.module.css
+++ b/src/components/Organizations/ExploreOrganizations/explore-organizations.module.css
@@ -2,11 +2,10 @@
 .OrgSingle figure {display: block; width: 100px; height: 100px; overflow: hidden; position: relative;display: inline-block; vertical-align: top;}
 .OrgSingle figure img {display: block; width: 100%; height: 100%; position: absolute; left: 0; top: 0;}
 .OrgSingle .OrgTitle {background-color: #F0F0F0;width: 200px; height: 100px; overflow: hidden; padding: 0px 0px 15px 0px; text-align: left; display: inline-block;  display: inline-block; vertical-align: middle; color: #000000;}
-.OrgSingle .OrgTitle h6 {width: 100%; display: block; padding: 15px 15px; font-size: 15px; color: #000000; background-color: #ffffff; text-align: left;}
-.OrgTitleAside {width: 100%; }
-.OrgSingle .ItemTitle h6 { font-size: 14px; color: #000000;}
-.OrgSingle .ItemInfo {width: 100%; padding: 6px 4%; background-color: #F0F0F0; text-align: center;}
-.OrgSingle .ItemInfo .ItemInfoSide, .ItemSingle .ItemInfo .ItemInfoSide2 {width: 40%; margin: 6px 4%; display: inline-block;}
-.OrgSingle .ItemInfo .ItemInfoSide2 {border-left: 1px solid #D0D0D0;}
-.OrgSingle .ItemInfo p {font-size: 9px; line-height: 1.3;}
+.OrgSingle .OrgTitle h6 {width: 100%; display: block; max-height: 45px; padding: 15px 15px; font-size: 15px; color: #000000; background-color: #ffffff; text-align: left;}
+.OrgTitleAside {width: 100px; display: inline-block; padding: 10px; height: 55px;}
+.OrgTitleAsideB {width: 99px; border-left: 1px solid #a0a0a0; display: inline-block;padding: 15px 10px 10px 10px;height: 55px;}
+.OrgTitleAside p, .OrgTitleAsideB p {text-align: center; font-size: 10px; color: #464646; line-height: 1.3;}
+.OrgSingle .OrgInfo {width: 100%; padding: 6px 4%; background-color: #F0F0F0; text-align: center;}
+
 .OrgAllSingle {width: 100%; text-align: left;}
