--- a/src/pages/OrganizationsMain/dapp/SubSections/organizations-main-sub-sections.module.css
+++ b/src/pages/OrganizationsMain/dapp/SubSections/organizations-main-sub-sections.module.css
@@ -1,27 +1,1 @@
-.Web3PagesRoot {
-  width: 1050px;
-}
-
-.image {
-  height: 300px;
-}
-
-.ItemsExploreMain {width: 100%; text-align: left;}
-.ItemsCreateMain {width: 100%; text-align: center;}
-.SingleContentPage {width: 100%; max-width: 990px; text-align: center;}
-.CollectionLeft {width: 300px; display: inline-block; text-align: center;  vertical-align: top;}
-.CollectionRight {width: 660px;display: inline-block; text-align: center;  margin-left: 30px;vertical-align: top;}
-
-
-.title {
-  margin-bottom: calc(var(--unit) * 3) 0;
-}
-
-.text {
-  padding: 0 calc(var(--unit) * 15);
-  margin: calc(var(--unit) * 3) 0;
-}
-
-.text:last-child {
-  margin-bottom: calc(var(--unit) * 10);
-}
+.OrgThingsCards {width: 990px; display: block; margin: 5px auto; text-align: center;}
