--- a/src/pages/OrganizationsMain/dapp/SubSections/organizations-main-sub-sections.module.css
+++ b/src/pages/OrganizationsMain/dapp/SubSections/organizations-main-sub-sections.module.css
@@ -1,1 +1,2 @@
 .OrgThingsCards {width: 990px; display: block; margin: 5px auto; text-align: center;}
+.GovernanceCardPage {width: 990px; display: block; margin: 5px auto; text-align: center;}
