--- a/src/components/Organizations/NotSupportedGeneralGovernanceOpenCard/not-supported-general-open-card.module.css
+++ b/src/components/Organizations/NotSupportedGeneralGovernanceOpenCard/not-supported-general-open-card.module.css
@@ -18,3 +18,4 @@
 .NotSupportedOpenCardSelectionSingleQuantity {margin: 20px auto 0px auto; text-align: center; width: 100%; display: inline-block;}
 .NotSupportedOpenCardSelectionSingleOpenStaked {width: 100%; display: inline-block; text-align: center; border-radius: 12px; background-color: #ffffff; margin: 20px auto 0px auto; padding: 10px;}
 .NotSupportedOpenCardSelectionSingleOpenStaked p {display: inline-block; margin: 5px 10px; font-size: 13px; color: #000000;}
+.ProposalRaw {width: 100%; background-color: #ffffff; padding: 10px; margin: 10px auto;}
