--- a/src/pages/IndexMain/index.module.css
+++ b/src/pages/IndexMain/index.module.css
@@ -21,7 +21,7 @@ a {cursor: pointer; text-decoration: none;}
 .TextPart {width: 750px; display: block;  text-align: center; position: relative; z-index: 5; margin: 10px auto 30px auto;}
 .TextPart h5 {width: 750px; display: inline-block; font-size: 35px; font-weight: 500; color: #000000; margin: 10px auto; line-height: 1.2; text-align: left;}
 .TextPart h6 {width: 750px; text-align: left; display: inline-block; font-size: 20px; font-weight: 400; color: #000000; margin: 10px auto; line-height: 1.3;}
-.Footer {width: 100%; margin-top: 100px; background-color: #5776A5; display: inline-block; padding: 40px; text-align: center;}
+.Footer {width: 100%; margin-top: 100px; background-color: #5776A5; display: inline-block; padding: 5px; text-align: center;}
 .FooterLinks {width: 990px; margin: 10px auto; display: block;}
 .CardsLayer {width: 100%;margin: 100px auto 10px auto; display: block; text-align: center;}
 .CardsLayer a {background: rgba(173, 163, 236, 0.3);box-shadow: inset 2px -2px 4px rgba(173, 163, 236, 0.9);border-radius: 30px;width: 200px;height: 290px; display: inline-block; margin: 10px; text-align: center; vertical-align: middle;}
@@ -30,4 +30,5 @@ a {cursor: pointer; text-decoration: none;}
 .CardsLayer p {font-size: 20px; color: #786FFF; font-weight: bold;}
 .TextPartBTN {width: 100%; text-align: left; margin: 10px auto;}
 .FooterLinks {width: 990px; display: inline-block; padding: 10px; margin: 10px;}
-.FooterLinks a {width:180px; display: inline-block; color: #ffffff; font-size: 15px; padding: 10px; text-align: left;}
+.FooterLinks a { display: inline-block; color: #ffffff; font-size: 15px; padding: 10px; text-align: left;}
+.FooterLinks p {color: #ffffff; font-size: 12px; margin: 10px auto;}
