--- a/src/components/Organizations/DelegationHeadline/delegation-headline.module.css
+++ b/src/components/Organizations/DelegationHeadline/delegation-headline.module.css
@@ -15,3 +15,9 @@
 .DelegationHeadlineCardConnectedBox::-webkit-scrollbar {display: none;}
 .DelegationHeadlineCardConnectedBox a {display: inline-block; width: 120px; height: 120px; overflow: hidden; position: relative;border-radius: 8px;}
 .DelegationHeadlineCardConnectedBox a img {width: 100%; height: 100%; display: inline-block;}
+.DelegationMainThingsCard {width: 990px; display: block;}
+.ViewDescription {width: 450px; padding: 30px;  display: inline-block; background-color: #ffffff;  border-radius: 20px;box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-webkit-box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-moz-box-shadow: 1px 1px 2px 1px rgba(202,202,202,0.32); text-align: left; overflow: hidden;position: relative; vertical-align: top; min-height: 200px;}
+.ViewDescription p {font-size: 12px; color: #676666; line-height: 1.3;}
+.DelegationMainThingsCardMainInfo {width: 920px; padding: 20px; display: inline-block; background-color: #ffffff;  border-radius: 20px;box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-webkit-box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-moz-box-shadow: 1px 1px 2px 1px rgba(202,202,202,0.32); text-align: left; overflow: hidden;position: relative; margin-top: 20px; text-align: center;}
+.DelegationMainThingsCardMainInfo p {width: 22%; background-color:#e9effc; display: inline-block; margin: 0.5%; font-size: 13px; line-height: 2; text-align: center; color: #000000; padding: 10px; border-radius: 16px;}
+.DelegationMainThingsCardMainInfo p b {font-size: 16px;}
