--- a/src/components/Organizations/GovernanceContainer/governance-container.module.css
+++ b/src/components/Organizations/GovernanceContainer/governance-container.module.css
@@ -65,3 +65,7 @@
 .ProposalTitle > h6 > a {width: 20px; height: 20px; display: inline-block; vertical-align: middle;} 
 .ProposalTitle > h6 > a img {width: 20px; height: 20px; display: inline-block;} 
 .MultiVoteBox {width: 450px; display: block; margin: 10px auto; background-color: #e9effc; padding: 20px; border-radius: 20px;}
+
+.ModalBack {position: fixed; z-index: 100000; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; background: linear-gradient(135deg,#c1befcd8,#fdf7f5b6 80%); text-align: center;display: flex;flex-wrap: wrap;flex-direction: row;justify-content: center;align-items: center;align-content: center}
+.ModalBoxGov {width: 600px;  z-index: 10000000; height: 80%; display: flex; background-color: #F0F0F0; border-radius: 20px;box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-webkit-box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-moz-box-shadow: 1px 1px 2px 1px rgba(202,202,202,0.32);}
+.ProposeContents {width: 100%; display: inline-block; padding: 30px;}
