--- a/src/components/Organizations/GovernanceContainer/governance-container.module.css
+++ b/src/components/Organizations/GovernanceContainer/governance-container.module.css
@@ -67,7 +67,19 @@
 .MultiVoteBox {width: 450px; display: block; margin: 10px auto; background-color: #e9effc; padding: 20px; border-radius: 20px;}
 
 .ModalBack {position: fixed; z-index: 100000; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; background: linear-gradient(135deg,#c1befcd8,#fdf7f5b6 80%); text-align: center;display: flex;flex-wrap: wrap;flex-direction: row;justify-content: center;align-items: center;align-content: center}
-.ModalBoxGov {width: 600px;  z-index: 10000000; display: flex; background-color: #F0F0F0; border-radius: 20px;box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-webkit-box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-moz-box-shadow: 1px 1px 2px 1px rgba(202,202,202,0.32);}
-.ProposeContents {width: 100%; display: inline-block; padding: 30px;}
+.ModalBoxGov {width: 500px; overflow: scroll; max-height: 70%;  z-index: 10000000; display: flex; background-color: #ffffff; border-radius: 20px;box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-webkit-box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-moz-box-shadow: 1px 1px 2px 1px rgba(202,202,202,0.32);}
+.ProposeContents {width: 450px; display: inline-block; padding: 30px; margin: 5px auto;}
+.ProposeContents h5 {font-size: 20px; font-weight: bold; margin: 10px auto; color: #000000;}
+.ProposeContents .RegularLabel {width: 300px; display: inline-block; padding: 10px; background-color: #e9effc; border-radius: 12px; margin: 10px auto;}
+.RegularLabel input {width: 90%; margin: 10px auto; display: inline-block; height: 30px; font-size: 15px; border: none; border-radius: 6px;padding: 10px;}
+.RegularLabel textarea {width: 90%; margin: 10px auto; display: inline-block; height: 80px; font-size: 12px; border: none; border-radius: 6px; padding: 10px;}
+.RegularLabel select {width: 90%; margin: 10px auto; display: inline-block; height: 30px; font-size: 15px; border: none; border-radius: 6px;padding: 10px;}
+.RegularLabel h6 {font-size: 16px; font-weight: bold; margin: 5px auto; color: #000000;}
+.ContextualPool {width: 100%; display: inline-block; text-align: center;}
+.ContextualPool h6 {font-size: 16px; font-weight: bold; margin: 5px auto; color: #000000;}
+.ContextualPool label {width: 47%; display: inline-block; margin: 5px 1%; background-color: #e9effc;}
 
-.ProposeContents .TradeMarketTokenSelector {}
+
+.ProposeContents .TradeMarketTokenSelector {width: 40px; height: 40px; display: inline-block; text-align: center; cursor: pointer; background-color: #F0F0F0;border-radius: 14px; overflow: hidden; vertical-align: top;}
+.ProposeContents .TradeMarketTokenSelector figure {width: 100%; height: 40px; display: inline-block;}
+.ProposeContents .TradeMarketTokenSelector figure img {width: 100%; height: 100%; display: block;}
