--- a/src/components/Global/Navigation/navigation.module.css
+++ b/src/components/Global/Navigation/navigation.module.css
@@ -4,26 +4,36 @@
   margin: 30px 15px;
   cursor: pointer; 
   text-align: center;
+  min-height: 100%;
 }
 
-.Navigation a {
+.NavigationItem {
+  position: relative;
   margin: 7px 0;
   display: inline-block;
-  width: 100%;
+  width:150px;
   text-align: left;
   padding: 8px 15px;
   background-color: #ffffff;
-  border-radius: 2px;
+  border-radius: 8px;
+}
+.NavigationItem:hover {
+  margin: 7px 0 7px 50px;
 }
 
-.item p {
+.Navigation .selected {
+  margin: 7px 0 7px 40px;
+}
+
+
+.NavigationItem p {
   font-size: 13px;
   font-weight: 500;
   color: #000000;
   vertical-align: middle;
   display: inline-block;
 }
-.item img {
+.NavigationItem img {
   width: 25px;
   height: 25px;
   margin-right: 5px;
@@ -31,6 +41,11 @@
   vertical-align: middle;
   display: inline-block;
 }
+
+
+.NavigationItem .Hand {position: absolute; left: -50px; top: 10px; width:25px; height: 20px; display: none;}
+
+.NavigationItem:hover .Hand {display: inline-block;}
 
 .selected {
   font-weight: bold;
@@ -46,7 +61,7 @@ p {
   align-self: center;
 }
 
-@media only screen and (max-width: 1300px) {
+@media only screen and (max-width: 1200px) {
   .Navigation {
     display: inline-block;
     border-left: none;
@@ -57,17 +72,34 @@ p {
     margin: 0px 0px 0px 50px;
     vertical-align: top;
   }
-  .item {
+  .NavigationItem:hover {
+    margin: 7px 10px;
+  }
+  .NavigationItem {
     font-size: 15px;
     color: #000000;
-    width:100%;
     text-align: center;
-  }
-  .Navigation a {
     margin: 7px 10px;
     display: inline-block;
     text-align: left; 
-    width: 120px; 
+    width: 150px; 
     text-align: center;
-    border-radius: 8px;}
+    border-radius: 8px;
+    background-color: transparent;
+  }
+  .NavigationItem img {display: none;}
+  .NavigationItem img {width: 10px; height: 10px;}
+  .NavigationItem:hover img {display: inline-block;}
+  .Navigation .Selected img {display: inline-block;}
+  .NavigationItem:hover, .Navigation .Selected {background-color: #ffffff;}
+  .NavigationItem:hover .Hand {display: none;}
+}
+
+@media only screen and (max-width: 990px) {
+  .NavigationItem {
+    font-size: 11px;
+    width: 20%;
+    overflow: hidden; 
+  }
+  .Navigation .Selected img {display: none;}
 }
