--- a/src/components/Organizations/GovernanceContainer/governance-container.module.css
+++ b/src/components/Organizations/GovernanceContainer/governance-container.module.css
@@ -83,3 +83,5 @@
 .ProposeContents .TradeMarketTokenSelector {width: 40px; height: 40px; display: inline-block; text-align: center; cursor: pointer; background-color: #F0F0F0;border-radius: 14px; overflow: hidden; vertical-align: top;}
 .ProposeContents .TradeMarketTokenSelector figure {width: 100%; height: 40px; display: inline-block;}
 .ProposeContents .TradeMarketTokenSelector figure img {width: 100%; height: 100%; display: block;}
+
+.ProposalOpen h6 {font-size: 15px; color: #000000; width: 100%; display: inline-block; margin: 10px auto; text-align: left; padding: 2px 30px;}
