--- a/src/components/Organizations/OrgMainThingsCard/org-main-things-card.module.css
+++ b/src/components/Organizations/OrgMainThingsCard/org-main-things-card.module.css
@@ -6,13 +6,16 @@
 .OrgThingsInfoContent p {font-size: 13px;display: inline-block; width: 100%; text-align: center;}
 .OrgThingsInfoContent p a {text-decoration: underline;color: #000000;}
 .OrgMainThingsCard .OpenBTN {position: absolute; top: 5px; right: 5px; width: 50px; height: 30px;}
-.OrgPartView {width: 940px; margin: 25px auto; display: inline-block; background-color: #ffffff; border-radius: 20px; box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-webkit-box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-moz-box-shadow: 1px 1px 2px 1px rgba(202,202,202,0.32); text-align: center; overflow: hidden;position: relative; padding: 25px 15px;}
+.OrgPartView {width: 940px; margin: 20px auto; display: inline-block; background-color: #ffffff; border-radius: 20px; box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-webkit-box-shadow: 1px 1px 2px 1px rgb(202 202 202 / 32%);-moz-box-shadow: 1px 1px 2px 1px rgba(202,202,202,0.32); text-align: center; overflow: hidden;position: relative; padding: 25px 15px;}
 .OrgPartTitle {width: 200px; display: inline-block; margin: 5px 30px 15px 5px; padding: 10px; vertical-align: middle; text-align: left;}
 .OrgPartTitle h6 {font-size: 18px; color: #000000; text-align: left; margin: 5px auto;}
 .OrgPartInfo {width: 200px; display: inline-block; background-color: #e9effc; padding: 10px; margin: 5px; border-radius: 12px;} 
 .OrgPartInfo p {font-size: 12px; line-height: 1.5;}
 .OrgPartInfo b {font-size: 13px; line-height: 1.5;}
-.DelegationsSection {border-top: 1px solid #e9effc; padding: 20px 20px 20px 20px; margin: 10px auto; width: 100%; display: inline-block; text-align: center;}
+.DelegationsSection {border-top: 1px solid #e9effc; padding: 20px 20px 20px 20px; margin: 10px auto; width: 100%; display: inline-block; text-align: left;}
+.DelegationsSectionOne {width: 280px; display: inline-block; margin: 5px; border-radius: 16px;  border: 1px solid #e9effc; text-align: left; overflow: hidden;}
+.DelegationsSectionOne > figure {display: inline-block; width: 70px; height: 70px; vertical-align: top;}
+.DelegationsSectionOne > figure img {width: 100%; height: 100%;}
 
 
 .InvestmentsSection {border-top: 1px solid #e9effc; padding: 20px 20px 20px 20px; margin: 10px auto; width: 100%; display: inline-block; text-align: center;}
@@ -21,4 +24,9 @@
 .InvestmentsSectionBuySell p > a {width: 20px; height: 20px; display: inline-block; vertical-align: middle; margin: 5px; position: relative;} 
 .InvestmentsSectionBuySell p > a img {width: 20px; height: 20px; display: inline-block;} 
 .InvestmentsSectionBuySell p > a span {position: absolute; right: 0px; top: 10px; font-size: 12px;}
-.InvestmentsSectionD {}
+.OrgPartViewF {width: 940px; margin: 15px auto; display: inline-block; text-align: center; overflow: hidden;position: relative;}
+.OrgPartFarm {width: 450px; margin: 10px;display: inline-block; text-align: left; padding: 20px; background-color: #e9effc; border-radius: 16px;}
+.OrgPartFarm a {width: 60px; height: 60px; display: inline-block; vertical-align: middle;}
+.OrgPartFarm a img {width: 100%; height: 100%; display: inline-block;}
+.OrgPartFarm p {width: 280px;display: inline-block; margin-left: 20px; padding-left: 50px; font-size: 12px; vertical-align: middle; text-align: left; vertical-align: middle; line-height: 1.5;}
+.OrgPartFarm p b {font-size: 15px;}
