--- a/src/pages/factories/dapp/factories-main.module.css
+++ b/src/pages/factories/dapp/factories-main.module.css
@@ -1,20 +1,3 @@
-.root {
-  width: 70%;
-}
 
-.image {
-  height: 300px;
-}
-
-.title {
-  margin-bottom: calc(var(--unit) * 3) 0;
-}
-
-.text {
-  padding: 0 calc(var(--unit) * 15);
-  margin: calc(var(--unit) * 3) 0;
-}
-
-.text:last-child {
-  margin-bottom: calc(var(--unit) * 10);
-}
+.ComingSoon {width: 700px; display: inline-block; margin: 100px auto;}
+.ComingSoon img {width: 400px;}
